# researchAIde_new

./: .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml  requirements.txt  test_output.txt
backend/app/: config.py  dependencies.py  main.py  security.py
backend/app/agents/: phd_agent.py  postdoc_agent.py
backend/app/agents/prompts/phd/: direction_generation.j2  direction_refinement.j2  gap_identification.j2  literature_analyzer.j2  phd_query_formulation.j2  phd_relevance_assessment.j2  query_formulation.j2
backend/app/agents/prompts/postdoc/: critique_synthesis.j2  postdoc_feasibility_assessment.j2  postdoc_novelty_assessment.j2
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py  llm.py  orchestration.py  papers.py  pdf.py  sessions.py
backend/app/middleware/: session_middleware.py
backend/app/models/: llm_config.py  message_models.py  operation_models.py  session.py
backend/app/orchestration/: __init__.py  conditional_edges.py  graph_state.py  orchestrator.py
backend/app/orchestration/nodes/: __init__.py  analysis_nodes.py  initialization_nodes.py  refinement_nodes.py  utility_nodes.py
backend/app/services/: arxiv_example.py  arxiv_service.py  chunking_service.py  collection_manager.py  embedding_service.py  ingestion_service.py  pdf_processor.py  search_service.py  session_storage.py  vector_db_client.py
backend/app/services/llm/: base_provider.py  google_provider.py  llm_manager.py  prompt_manager.py
backend/app/utils/: logging_utils.py
backend/researchaide_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_main.py
backend/tests/integration/: test_google_provider.py  test_ingestion_service_integration.py  test_papers_api.py  test_pdf_api.py
backend/tests/integration/orchestration/: __init__.py  test_research_orchestrator_flows.py
backend/tests/scenario/: __init__.py  test_basic_research_scenario.py
backend/tests/unit/agents/: __init__.py  test_phd_agent.py
backend/tests/unit/orchestration/: __init__.py  test_orchestrator_nodes.py
backend/tests/unit/services/: test_arxiv_service.py  test_chunking_service.py  test_collection_manager.py  test_ingestion_service.py  test_search_service.py  test_vector_db_client.py
backend/tests/utils/: __init__.py  mock_external_services.py  mock_llm_responses.py  mock_services.py
frontend/: package-lock.json  (+3 more)
(+63 files in other folders)
